# readconfC

./: README.md  check.sh  configure.ac
src/: Makefile.am  readconfC.c  readconfC.h
test/: Makefile.am  main.c  main.cpp
